--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-image: url('/img/越越家.png'); /* 自定义背景图片 */
+    background-image: url('/img/越越家.jpg'); /* 自定义背景图片 */
     background-size: cover;
     background-attachment: fixed;
     background-position: center center; /* 背景图片偏右 */
