--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,19 @@
 body {
+    min-height: 100vh;
     font-family: Arial, sans-serif;
     background-image: url('/img/越越家.webp'); /* 自定义背景图片 */
     background-size: cover;
     background-attachment: fixed;
     background-position: center center; /* 背景图片偏右 */
     transition: filter 0.3s ease; /* 平滑过渡效果 */
+    display: flex;
+    flex-direction: column;
 }
+
+.content {
+    flex: 1; /* 填充剩余空间 */
+}
+
 .profile-img {
     width: 25vw; /* 根据需要调整大小 */
     height: 25vw;
@@ -80,11 +88,14 @@ footer {
     text-align: center;
     padding: 20px 0;
     margin: 0;
-    position: absolute;
+    /* position: absolute; */
     bottom: 0;
     left: 0;
     right: 0;
     width: 100%;
+    margin-top: auto;
+    flex-shrink: 0; /* 不缩放 */
+    border-radius: 10px;
 }
 
 nav ul {
