--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     min-height: 100vh;
     font-family: Arial, sans-serif;
-    background-image: url('/img/越越家.webp'); /* 自定义背景图片 */
+    background-image: url('https://abitginger-1327459979.cos.ap-beijing.myqcloud.com/pic/%E8%B6%8A%E8%B6%8A%E5%AE%B6.webp'), url(/img/越越家.webp); /* 自定义背景图片 */
     background-size: cover;
     background-attachment: fixed;
     background-position: center center; /* 背景图片偏右 */
